--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ body {
     margin-top: 3rem;
     background-color: var(--main-bg-color);
     /* width: 100%; */
+    border-radius: .5rem;
 }
 
 .form--control:not(:last-child) {
@@ -237,4 +238,25 @@ body {
     border-radius: .5rem;
     border: none;
     outline: none;
+}
+
+.textarea:focus {
+    border-bottom: 3px solid greenyellow;
+}
+
+.btn {
+    padding: 1.5rem 2rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.6rem;
+    color: var(--color-teriary-2);
+    border-radius: .5rem;
+    border: none;
+    background-color: var(--color-secondary);
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.btn:hover {
+    background-color: #6bc455;
 }
