--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,9 @@ body {
 
 .nav {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
     padding: 1rem 3rem;
-    /* background-color: rgba(0, 0, 255, .5); */
     background-color: rgba(13, 20, 59, .5);
 }
 
@@ -49,6 +47,13 @@ body {
     font-size: 1.7rem;
     color: #fff;
     text-decoration: none;
+}
+
+.nav--list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .social--icon,
@@ -317,12 +322,12 @@ html {
 }
 
 .nav--list {
-    display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
     margin-left: auto;
     font-size: 2rem;
 }
+
     
 .nav--list__item:not(:last-child) {
     margin-right: 10rem;
